Fixed file locations and background image.

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <link rel="shortcut icon" href="images/favicon.png">
     <!-- ===== STYLESHEETS ===== -->
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Magnific Popup -->
-    <link href="css/magnific-popup.min.css" rel="stylesheet">
+    <link href="assets/css/magnific-popup.min.css" rel="stylesheet">
     <!-- Owl Carousel -->
-    <link href="css/owl.carousel.min.css" rel="stylesheet">
-    <link href="css/owl.theme.default.min.css" rel="stylesheet">
+    <link href="assets/css/owl.carousel.min.css" rel="stylesheet">
+    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet">
     <!-- Preloader -->
-    <link href="css/preloader.css" rel="stylesheet">
+    <link href="assets/css/preloader.css" rel="stylesheet">
     <!-- Main styles -->
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="assets/css/styles.css" rel="stylesheet">
     <!-- Responsive styles -->
-    <link href="css/responsive.css" rel="stylesheet">
+    <link href="assets/css/responsive.css" rel="stylesheet">
     <!-- Font Awesome Icons -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- Google Font -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
   </head>
@@ -65,11 +65,11 @@
 
     <!-- Home -->
     <section id="home" class="fill">
-      <div class="home-background parallax-section" style="background-image: url(images/blackBackground.jpg)">
+      <div class="home-background parallax-section" style="background-image: url(assets/images/blackBackground.png)">
         <div class="bg-overlay-black">
           <div class="container text-center">
             <div class="home-content">
-              <img src="images/profile image.jpg" alt=""><!-- Avatar Image source -->
+              <img src="assets/images/profile image.jpg" alt="Profile Image"><!-- Avatar Image source -->
               <h2 class="margin-top-30">Ruben Torres Beltran</h2>
               <p>Student / Web Developer</p>
             </div>
@@ -118,7 +118,7 @@
             <!-- end Education box 2 -->
           </div>
           <!-- Skills -->
-          <div class="col-12 col-lg-6 skills-background" style="background-image: url(images/greyBackground.jpg)">
+          <div class="col-12 col-lg-6 skills-background" style="background-image: url(assets/images/greyBackground.jpg)">
             <div class="bg-overlay-black">
               <div class="middle-content">
                 <div class="row">
@@ -189,7 +189,7 @@
             </div><!-- end Experience box 3 -->
           </div>
           <!-- Hire me -->
-          <div class="col-12 col-lg-6 order-lg-1 hire-background" style="background-image: url(images/blackBackground.jpg)">
+          <div class="col-12 col-lg-6 order-lg-1 hire-background" style="background-image: url(assets/images/blackBackground.jpg)">
             <div class="bg-overlay-white">
               <div class="middle-content">
                 <h4 class="margin-bottom-30">I'm Ready to Work with you</h4>
@@ -215,7 +215,7 @@
             <div id="portfolioSlider" class="owl-carousel">
               <!-- 1 -->
               <div>
-                <img src="images/portfolio-img-1.jpg" alt=""><!-- image source -->
+                <img src="assets/images/portfolio-img-1.jpg" alt=""><!-- image source -->
                 <div class="image-layer">
                   <div class="image-title">
                     <h5>Sort A</h5>
@@ -226,7 +226,7 @@
                 </div>
                 <!-- popup content -->
                 <div id="popup-1" class="mfp-hide popup-box">
-                  <img src="images/portfolio-img-1.jpg" alt=""><!-- image source -->
+                  <img src="assets/images/portfolio-img-1.jpg" alt=""><!-- image source -->
                   <div class="popup-content">
                     <a href="https://ryanccrawford.github.io/sortAList/"><h5>Sort A</h5></a>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
@@ -236,7 +236,7 @@
               </div>
               <!-- 2 -->
               <div>
-                <img src="images/portfolio-img-2.jpg" alt=""><!-- image source -->
+                <img src="assets/images/portfolio-img-2.jpg" alt=""><!-- image source -->
                 <div class="image-layer">
                   <div class="image-title">
                     <h5>Train Scheduler</h5>
@@ -247,7 +247,7 @@
                 </div>
                 <!-- popup content -->
                 <div id="popup-2" class="mfp-hide popup-box">
-                  <img src="images/portfolio-img-2.jpg" alt=""><!-- image source -->
+                  <img src="assets/images/portfolio-img-2.jpg" alt=""><!-- image source -->
                   <div class="popup-content">
                     <h5>Project Title</h5>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
@@ -257,7 +257,7 @@
               </div>
               <!-- 3 -->
               <div>
-                <img src="images/portfolio-img-1.jpg" alt=""><!-- image source -->
+                <img src="assets/images/portfolio-img-1.jpg" alt=""><!-- image source -->
                 <div class="image-layer">
                   <div class="image-title">
                     <h5>Project Title</h5>
@@ -268,7 +268,7 @@
                 </div>
                 <!-- popup content -->
                 <div id="popup-3" class="mfp-hide popup-box">
-                  <img src="images/portfolio-img-1.jpg" alt=""><!-- image source -->
+                  <img src="assets/images/portfolio-img-1.jpg" alt=""><!-- image source -->
                   <div class="popup-content">
                     <h5>Project Title</h5>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
@@ -370,18 +370,18 @@
     <!-- jQuery Library -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <!-- Popper Library -->
-    <script src="js/popper.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
     <!-- Bootstrap -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
     <!-- Google Maps -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBB4Mt2dEWuhS92yGgtboZ1px3glGQXSls&callback=initMap"></script>
     <!-- Magnific Popup -->
-    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <!-- Retina Graphics -->
-    <script src="js/retina.min.js"></script>
+    <script src="assets/js/retina.min.js"></script>
     <!-- Theme Plugins -->
-    <script src="js/theme-plugins.min.js"></script>
+    <script src="assets/js/theme-plugins.min.js"></script>
     <!-- Template Functions -->
-    <script src="js/scripts.js"></script>
+    <script src="assets/js/scripts.js"></script>
   </body>
 </html>
