Slight changes made.

--- a/index.html
+++ b/index.html
@@ -189,12 +189,10 @@
             </div><!-- end Experience box 3 -->
           </div>
           <!-- Hire me -->
-          <div class="col-12 col-lg-6 order-lg-1 hire-background" style="background-image: url(assets/images/blackBackground.jpg)">
-            <div class="bg-overlay-white">
-              <div class="middle-content">
-                <h4 class="margin-bottom-30">I'm Ready to Work with you</h4>
-                <a class="btn-style" href="#contact">Contact Me</a><!-- button -->
-              </div>
+          <div class="col-12 col-lg-6 order-lg-1 hire-background" style="background-image: url(assets/images/blackBackground.png)">
+            <div class="middle-content">
+              <h4 class="margin-bottom-30" style="color: white;">I'm Ready to Work with you</h4>
+              <a class="btn-style" style="color:black; background: white;" href="#contact">Contact Me</a><!-- button -->
             </div>
           </div>
           <!-- end Hire me -->
@@ -215,10 +213,10 @@
             <div id="portfolioSlider" class="owl-carousel">
               <!-- 1 -->
               <div>
-                <img src="assets/images/portfolio-img-1.jpg" alt=""><!-- image source -->
+                <img src="assets/images/portfolio-img-2.jpg" alt="projectImageOne" style="width:100%; height: 100%;"><!-- image source -->
                 <div class="image-layer">
                   <div class="image-title">
-                    <h5>Sort A</h5>
+                  <a href="https://ryanccrawford.github.io/sortAList/"><h5>Sort A</h5></a>
                     <div>
                       <a class="lightbox-popup" href="#popup-1">view detail</a><!-- link to popup content -->
                     </div>
@@ -226,7 +224,7 @@
                 </div>
                 <!-- popup content -->
                 <div id="popup-1" class="mfp-hide popup-box">
-                  <img src="assets/images/portfolio-img-1.jpg" alt=""><!-- image source -->
+                  <img src="assets/images/portfolio-img-2.jpg" alt="ProjectImageOne"><!-- image source -->
                   <div class="popup-content">
                     <a href="https://ryanccrawford.github.io/sortAList/"><h5>Sort A</h5></a>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
@@ -249,7 +247,7 @@
                 <div id="popup-2" class="mfp-hide popup-box">
                   <img src="assets/images/portfolio-img-2.jpg" alt=""><!-- image source -->
                   <div class="popup-content">
-                    <h5>Project Title</h5>
+                    <h5>Train Scheduler</h5>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
                   </div>
                 </div>
@@ -260,7 +258,7 @@
                 <img src="assets/images/portfolio-img-1.jpg" alt=""><!-- image source -->
                 <div class="image-layer">
                   <div class="image-title">
-                    <h5>Project Title</h5>
+                    <h5>Trivia Game</h5>
                     <div>
                       <a class="lightbox-popup" href="#popup-3">view detail</a><!-- link to popup content -->
                     </div>
@@ -270,7 +268,7 @@
                 <div id="popup-3" class="mfp-hide popup-box">
                   <img src="assets/images/portfolio-img-1.jpg" alt=""><!-- image source -->
                   <div class="popup-content">
-                    <h5>Project Title</h5>
+                    <h5>Trivia Game</h5>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
                   </div>
                 </div>
