Added Links to Portfolio Section

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <img src="assets/images/portfolio-img-2.jpg" alt=""><!-- image source -->
                 <div class="image-layer">
                   <div class="image-title">
-                    <h5>Train Scheduler</h5>
+                  <a href="https://rubentba.github.io/trainScheduler/"><h5>Train Scheduler</h5></a>
                     <div>
                       <a class="lightbox-popup" href="#popup-2">view detail</a><!-- link to popup content -->
                     </div>
@@ -247,7 +247,7 @@
                 <div id="popup-2" class="mfp-hide popup-box">
                   <img src="assets/images/portfolio-img-2.jpg" alt=""><!-- image source -->
                   <div class="popup-content">
-                    <h5>Train Scheduler</h5>
+                  <a href="https://rubentba.github.io/trainScheduler/"><h5>Train Scheduler</h5></a>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
                   </div>
                 </div>
@@ -258,7 +258,7 @@
                 <img src="assets/images/portfolio-img-1.jpg" alt=""><!-- image source -->
                 <div class="image-layer">
                   <div class="image-title">
-                    <h5>Trivia Game</h5>
+                  <a href="https://rubentba.github.io/TriviaGame/"><h5>Trivia Game</h5></a>
                     <div>
                       <a class="lightbox-popup" href="#popup-3">view detail</a><!-- link to popup content -->
                     </div>
@@ -268,7 +268,7 @@
                 <div id="popup-3" class="mfp-hide popup-box">
                   <img src="assets/images/portfolio-img-1.jpg" alt=""><!-- image source -->
                   <div class="popup-content">
-                    <h5>Trivia Game</h5>
+                  <a href="https://rubentba.github.io/TriviaGame/"><h5>Trivia Game</h5></a>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
                   </div>
                 </div>
