Added LIRI to Portfolio section.

--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
         <div class="row">
           <div class="col-12 col-lg-6 section-padding">
             <h2 class="section-title">Portfolio</h2><!-- Section Title -->
-            <p>Here are three projects I am grateful to have worked on.</p>
+            <p>Here are three projects I am grateful to have worked on.</p><br>
+            <p><a href="https://github.com/Rubentba/liri-node-app">LIRI-BOT</a>: Here is LIRI-BOT, a node command line app that takes in pre-defined commands and displays responses.</p>
           </div>
           <div class="col-12 col-lg-6 portfolio-content">
             <div id="portfolioSlider" class="owl-carousel">
