--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
           <div class="col-12 col-lg-6 section-padding">
             <h2 class="section-title">Portfolio</h2><!-- Section Title -->
             <p>Here are three projects I am grateful to have worked on.</p><br>
-            <p><a href="https://github.com/Rubentba/liri-node-app">LIRI-BOT</a>: Here is LIRI-BOT, a node command line app that takes in pre-defined commands and displays responses.</p>
+            <p><a href="https://github.com/Rubentba/liri-node-app">LIRI-BOT</a>: Here is LIRI-BOT, a Node Command Line app that takes in pre-defined commands and displays responses.</p>
+            <p><a href="https://github.com/Rubentba/Bamazon">Bamazon</a>: Here is Bamazon, a Node Command Line app allows users to purchase mock items which are stored with in a SQL database..</p>
           </div>
           <div class="col-12 col-lg-6 portfolio-content">
             <div id="portfolioSlider" class="owl-carousel">
