Added newsScraper to portfolio section.

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <p>Here are three projects I am grateful to have worked on.</p><br>
             <p><a href="https://github.com/Rubentba/liri-node-app">LIRI-BOT</a>: Here is LIRI-BOT, a Node Command Line app that takes in pre-defined commands and displays responses.</p>
             <p><a href="https://github.com/Rubentba/Bamazon">Bamazon</a>: Here is Bamazon, a Node Command Line app allows users to purchase mock items which are stored with in a SQL database..</p>
-            <p><a href="https://github.com/Rubentba/projectTwo">GamersMingle</a>: A platform where you can connect with other entry - level game developers to share games that they have made and get input/help with continued development using chatting features.</p>
+            <p><a href="https://github.com/Rubentba/newsScraper">NPR Scraper</a>: A webscrapper that takes NPR articles and give the user a basic summary of the article and allows them to leave comments.</p>
           </div>
           <div class="col-12 col-lg-6 portfolio-content">
             <div id="portfolioSlider" class="owl-carousel">
