Testing img for stockpholio.

--- a/index.html
+++ b/index.html
@@ -95,31 +95,22 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-12 col-lg-6 section-padding">
-                <h2 class="section-title">Portfolio</h2><!-- Section Title -->
+                <h2 class="section-title">Skills</h2><!-- Section Title -->
                 <p>To the right lie three projects I have worked on that I believe demonstrate what I am capable of as a Web Developer.</p><br>
               </div>
               <div class="col-12 col-lg-6 portfolio-content">
                 <div id="portfolioSlider" class="owl-carousel">
                   <!-- 1 -->
                   <div>
-                    <img src="assets/images/portfolio-img-2.jpg" alt="projectImageOne" style="width:100%; height: 100%;"><!-- image source -->
+                    <img src="assets/images/stockpholio-screenshot.JPG" alt="Stockpholio" style="height:474px; width:100%"><!-- image source -->
                     <div class="image-layer">
                       <div class="image-title">
-                      <a href="https://ryanccrawford.github.io/sortAList/"><h5>Sort A</h5></a>
+                      <a href="https://stockpholio.herokuapp.com/"><h5>Stockpholio</h5></a>
                         <div>
-                          <a class="lightbox-popup" href="#popup-1">view detail</a><!-- link to popup content -->
+                          <a href="https://github.com/Rubentba/stockPholio">Github Repo</a><!-- link to popup content -->
                         </div>
                       </div>
                     </div>
-                    <!-- popup content -->
-                    <div id="popup-1" class="mfp-hide popup-box">
-                      <img src="assets/images/portfolio-img-2.jpg" alt="ProjectImageOne"><!-- image source -->
-                      <div class="popup-content">
-                        <a href="https://ryanccrawford.github.io/sortAList/"><h5>Sort A</h5></a>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
-                      </div>
-                    </div>
-                    <!-- end popup content -->
                   </div>
                   <!-- 2 -->
                   <div>
@@ -128,19 +119,10 @@
                       <div class="image-title">
                       <a href="https://rubentba.github.io/trainScheduler/"><h5>Train Scheduler</h5></a>
                         <div>
-                          <a class="lightbox-popup" href="#popup-2">view detail</a><!-- link to popup content -->
+                            <a href="https://rubentba.github.io/trainScheduler/">Github Repo</a><!-- link to popup content -->
                         </div>
                       </div>
                     </div>
-                    <!-- popup content -->
-                    <div id="popup-2" class="mfp-hide popup-box">
-                      <img src="assets/images/portfolio-img-2.jpg" alt=""><!-- image source -->
-                      <div class="popup-content">
-                      <a href="https://rubentba.github.io/trainScheduler/"><h5>Train Scheduler</h5></a>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
-                      </div>
-                    </div>
-                    <!-- end popup content -->
                   </div>
                   <!-- 3 -->
                   <div>
@@ -149,19 +131,10 @@
                       <div class="image-title">
                       <a href="https://rubentba.github.io/TriviaGame/"><h5>Trivia Game</h5></a>
                         <div>
-                          <a class="lightbox-popup" href="#popup-3">view detail</a><!-- link to popup content -->
+                            <a href="https://rubentba.github.io/TriviaGame/">Github Repo</a><!-- link to popup content -->
                         </div>
                       </div>
                     </div>
-                    <!-- popup content -->
-                    <div id="popup-3" class="mfp-hide popup-box">
-                      <img src="assets/images/portfolio-img-1.jpg" alt=""><!-- image source -->
-                      <div class="popup-content">
-                      <a href="https://rubentba.github.io/TriviaGame/"><h5>Trivia Game</h5></a>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
-                      </div>
-                    </div>
-                    <!-- end popup content -->
                   </div>
                   <!-- end 3 -->
                 </div><!-- end owl-carousel -->
@@ -248,24 +221,6 @@
               <div class="col-12 col-lg-6 skills-background" style="background-image: url(assets/images/greyBackground.jpg)">
                 <div class="bg-overlay-black">
                   <div class="middle-content">
-                    <div class="row">
-                      <!-- Skill 1 -->
-                      <div class="col-12 col-sm-4 skill-bar">
-                        <input type="text" value="0" data-number="60" class="dial">
-                        <h6 class="heading-uppercase">HTML5</h4>
-                      </div>
-                      <!-- Skill 2 -->
-                      <div class="col-12 col-sm-4 skill-bar">
-                        <input type="text" value="0" data-number="40" class="dial">
-                        <h6 class="heading-uppercase">Javascript</h4>
-                      </div>
-                      <!-- Skill 3 -->
-                      <div class="col-12 col-sm-4 skill-bar">
-                        <input type="text" value="0" data-number="70" class="dial">
-                        <h6 class="heading-uppercase">CSS3</h4>
-                      </div>
-                      <!-- end Skill 3 -->
-                    </div><!-- end row -->
                   </div>
                 </div>
               </div>
