Testing img for stockpholio v2.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div id="portfolioSlider" class="owl-carousel">
                   <!-- 1 -->
                   <div>
-                    <img src="assets/images/stockpholio-screenshot.JPG" alt="Stockpholio" style="height:474px; width:100%"><!-- image source -->
+                    <img src="assets/images/stockpholio-screenshot.JPG" alt="Stockpholio" style="height:474px; width:100%;"><!-- image source -->
                     <div class="image-layer">
                       <div class="image-title">
                       <a href="https://stockpholio.herokuapp.com/"><h5>Stockpholio</h5></a>
@@ -114,7 +114,7 @@
                   </div>
                   <!-- 2 -->
                   <div>
-                    <img src="assets/images/portfolio-img-2.jpg" alt=""><!-- image source -->
+                    <img src="assets/images/stockpholio-screenshot.JPG" alt="" style="height:474px; width:100%"><!-- image source -->
                     <div class="image-layer">
                       <div class="image-title">
                       <a href="https://rubentba.github.io/trainScheduler/"><h5>Train Scheduler</h5></a>
@@ -126,7 +126,7 @@
                   </div>
                   <!-- 3 -->
                   <div>
-                    <img src="assets/images/portfolio-img-1.jpg" alt=""><!-- image source -->
+                    <img src="assets/images/stockpholio-screenshot.JPG" alt="" style="height:474px; width:100%"><!-- image source -->
                     <div class="image-layer">
                       <div class="image-title">
                       <a href="https://rubentba.github.io/TriviaGame/"><h5>Trivia Game</h5></a>
