Adjusting min height on all sections.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                   </div>
                   <!-- 3 -->
                   <div>
-                    <img src="assets/images/stockpholio-screenshot.JPG" alt="" style="height:474px; width:100%"><!-- image source -->
+                    <img src="assets/images/stockpholio-screenshot.JPG" alt="" style="min-height:474px; width:100%"><!-- image source -->
                     <div class="image-layer">
                       <div class="image-title">
                       <a href="https://rubentba.github.io/TriviaGame/"><h5>Trivia Game</h5></a>
@@ -147,7 +147,7 @@
     <!-- Experience -->
     <section id="experience">
       <div class="container-fluid">
-        <div class="row" style="min-height:720px; min-width: 720px;">
+        <div class="row" style="min-height:474px;">
           <div class="col-12 col-lg-6 order-lg-2 section-padding">
             <h2 class="section-title">Experience</h2><!-- Section Title -->
             <!-- Experience box 1 -->
@@ -189,7 +189,7 @@
         <!-- Education -->
         <section id="education">
           <div class="container-fluid">
-            <div class="row" style="min-height:720px; min-width: 720px;">
+            <div class="row" style="min-height:474px;">
               <div class="col-12 col-lg-6 section-padding">
                 <h2 class="section-title">Education</h2><!-- Section Title -->
                 <!-- Education box 1 -->
@@ -233,7 +233,7 @@
     <!-- Contact -->
     <section id="contact">
       <div class="container-fluid">
-        <div class="row" style="min-height:720px; min-width: 720px;">
+        <div class="row" style="min-height:474px;">
           <div class="col-12 col-lg-6 order-lg-2 section-padding">
             <h2 class="section-title">Get In Touch</h2><!-- Section Title -->
             <!-- Contact Info -->
