Updated min-height for hire-me section

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
           </div>
           <!-- Hire me -->
-          <div class="col-12 col-lg-6 order-lg-1 hire-background" style="background-image: url(assets/images/blackBackground.png)">
+          <div class="col-12 col-lg-6 order-lg-1 hire-background" style="background-image: url(assets/images/blackBackground.png); min-height:474px;">
             <div class="middle-content">
               <h4 class="margin-bottom-30" style="color: white;">I'm Ready to Work with you</h4>
               <a class="btn-style" style="color:black; background: white;" href="#contact">Contact Me</a><!-- button -->
