Updated portfolio images.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   </div>
                   <!-- 2 -->
                   <div>
-                    <img src="assets/images/stockpholio-screenshot.JPG" alt="" style="height:474px; width:100%"><!-- image source -->
+                    <img src="assets/images/Train-Schedule-Screenshot.JPG" alt="Train Scheduler" style="height:474px; width:100%"><!-- image source -->
                     <div class="image-layer">
                       <div class="image-title">
                       <a href="https://rubentba.github.io/trainScheduler/"><h5>Train Scheduler</h5></a>
@@ -126,7 +126,7 @@
                   </div>
                   <!-- 3 -->
                   <div>
-                    <img src="assets/images/stockpholio-screenshot.JPG" alt="" style="min-height:474px; width:100%"><!-- image source -->
+                    <img src="assets/images/Trivia-Game-Screenshot.JPG" alt="Trivia Game" style="min-height:474px; width:100%"><!-- image source -->
                     <div class="image-layer">
                       <div class="image-title">
                       <a href="https://rubentba.github.io/TriviaGame/"><h5>Trivia Game</h5></a>
@@ -218,7 +218,7 @@
                 <!-- end Education box 2 -->
               </div>
               <!-- Skills -->
-              <div class="col-12 col-lg-6 skills-background" style="background-image: url(assets/images/greyBackground.jpg)">
+              <div class="col-12 col-lg-6 skills-background" style="background-image: url(assets/images/greyBackground.jpg); min-height:474px;">
                 <div class="bg-overlay-black">
                   <div class="middle-content">
                   </div>
